# agno-docs-agent

./: .gitignore  config-openrouter.yml  config.yml  pyproject.toml
.atl/: skill-registry.md
src/agno_docs_agent/: __init__.py  __main__.py  agent.py  config.py  server.py
src/agno_docs_agent/knowledge/: __init__.py  embedder.py  store.py
src/agno_docs_agent/prompts/: __init__.py  instructions.py
src/agno_docs_agent/tools/: __init__.py  expert.py
tests/e2e/: test_mcp_client.py
tests/integration/: test_knowledge.py
tests/unit/: test_agent.py  test_embedder.py  test_store.py  test_tools.py
