[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agno-docs-agent"
version = "0.1.0"
description = "Intelligent MCP layer for Agno — agentic docs expert with local embeddings"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "mcp>=1.0,<2.0",
    "pydantic>=2.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]
agent = [
    "sentence-transformers",
    "sqlite-vec",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agno_docs_agent"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--cov=src/agno_docs_agent --cov-fail-under=80"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
